# pup-recorder

./: .gitattributes  .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  biome.json  build.rs  build.ts  build_rust.ts  package.json  rust-toolchain.toml  tsconfig.json
rust/: darwin-arm64.node  darwin-x64.node  linux-arm64.node  linux-x64.bin.d.ts  linux-x64.node  native.zip.d.ts
src/: app.ts  audio_preload.ts  cli.ts  common.ts  iframe_preload.ts  index.ts  mcp_server.ts  pup.ts
src/ai/: mcp.ts  opencode.ts
src/base/: abort.ts  audio_capture.ts  basedir.ts  blank_frame.ts  cdp.ts  chromium.ts  cli_ui.ts  constants.ts  crash.ts  debounce.ts  electron.ts  encoder.ts  env.ts  ffmpeg.ts  frame_drop.ts  html_check.ts  hwaccel.ts  image.ts  lazy.ts  limiter.ts  logging.ts  network.ts  noerr.ts  parser.ts  process.ts  proxy.ts  record.ts  retry.ts  schema.ts  stream.ts  timing.ts  types.ts  waitable_event.ts  window.ts  x265.ts  xvfb.ts
src/base/encoder/: alpha.ts  audio.ts  codec.ts  encoder.ts  factory.ts  misc.ts  muxer.ts  nal.ts  nvenc.ts  pipeline.ts  sink.ts  (+4 more)
src/renderer/: audio.ts  audio_capture.ts  bgra.ts  electron.ts  frame_sync.ts  html_check.ts  ipc.ts  network.ts  protocol.ts  puppeteer.ts  render.ts  rerender.ts  schema.ts  screenshot.ts  shoot.ts  stego.ts  tick.ts  webcodecs.ts  window.ts
src/runtime/: audio_preload.ts  audio_shim.ts  hf_hook.ts  iframe_hook.ts  iframe_preload.ts  iframe_video_hook.ts  render_preload.ts  shoot_preload.ts  tick_hook.ts
src/rust/: lib.rs  lib.ts
x265/: darwin-arm64  darwin-x64  darwin-x64.bin.d.ts  linux-arm64
(+32 files in other folders)
