[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
napi-build = "2"

[dependencies]
napi = { version = "2", features = ["napi4", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt"] }
